--- a/frontend/src/components/SpotsIndex/SpotsIndex.css
+++ b/frontend/src/components/SpotsIndex/SpotsIndex.css
@@ -1,18 +1,27 @@
+.spots-container {
+  /* border: 5px pink solid; */
+  height: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+  padding-top: 9vh;
+  padding-bottom: 6vh;
+}
+
+
 .allSpots {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(255px, 1fr));
-  grid-template-rows: 35%;
-  column-gap: 1.5%;
-  row-gap: 1%;
-  width: 100%;
+  column-gap: 1.25%;
+  row-gap: 5vh;
+  /* border: 5px green solid; */
   height: 100%;
 }
 
-.all-spots {
-  height: 100vh;
-  width: 89vw;
-  margin-top: 10vh;
-  margin-bottom: 10vh;
+/* .all-spots {
+  position: relative;
+  height: 100%;
   padding-left: 5%;
   padding-right: 5%;
-}
+  border: 5px pink solid;
+  margin-top: 8vh;
+} */
